# flask-poetry-docker

./: Dockerfile  app.py  db.sqlite3  docker-compose.yml  pyproject.toml
.env/: .dev-sample
compose/local/flask/: Dockerfile  entrypoint  start
migrations/versions/: de842fa7a48c_initial_migration.py
project/: __init__.py  config.py
