[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["Slavina Stefanova <sstefanova@wikimedia.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
celery = "^5.2.7"
gunicorn = "^20.1.0"
redis = "^4.3.4"
flower = "^1.1.0"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-CeleryExt = "^0.4.3"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
